set(chunkmanagertest_SRCS chunkmanagertest.cpp)
add_executable(chunkmanagertestNAME chunkmanagertest ${chunkmanagertest_SRCS})
add_test(chunkmanagertest chunkmanagertest)
ecm_mark_as_test(chunkmanagertest)
target_link_libraries( chunkmanagertest Qt5::Test testlib ktorrent)

set(preallocationtest_SRCS preallocationtest.cpp)
add_executable(preallocationtestNAME preallocationtest ${preallocationtest_SRCS})
add_test(preallocationtest preallocationtest)
ecm_mark_as_test(preallocationtest)
target_link_libraries( preallocationtest Qt5::Test testlib ktorrent)