set(polltest_SRCS polltest.cpp)
add_executable(polltest ${polltest_SRCS})
add_test(polltest polltest)
ecm_mark_as_test(polltest)
target_link_libraries( polltest Qt5::Test ktorrent)

set(wakeuppipetest_SRCS wakeuppipetest.cpp)
add_executable(wakeuppipetest ${wakeuppipetest_SRCS})
add_test(wakeuppipetest wakeuppipetest)
ecm_mark_as_test(wakeuppipetest)
target_link_libraries( wakeuppipetest Qt5::Test ktorrent)