set(superseedtest_SRCS superseedtest.cpp)
add_executable(superseedtest ${superseedtest_SRCS})
add_test(superseedtest superseedtest)
ecm_mark_as_test(superseedtest)
target_link_libraries( superseedtest Qt5::Test KF5::Torrent)

set(packetreadertest_SRCS packetreadertest.cpp)
add_executable(packetreadertest ${packetreadertest_SRCS})
add_test(packetreadertest packetreadertest)
ecm_mark_as_test(packetreadertest)
target_link_libraries(packetreadertest Qt5::Test KF5::Torrent)

set(connectionlimittest_SRCS connectionlimittest.cpp)
add_executable(connectionlimittest ${connectionlimittest_SRCS})
add_test(connectionlimittest connectionlimittest)
ecm_mark_as_test(connectionlimittest)
target_link_libraries(connectionlimittest Qt5::Test KF5::Torrent)

set(accessmanagertest_SRCS accessmanagertest.cpp)
add_executable(accessmanagertest ${accessmanagertest_SRCS})
add_test(accessmanagertest accessmanagertest)
ecm_mark_as_test(accessmanagertest)
target_link_libraries(accessmanagertest Qt5::Test KF5::Torrent)
