set(localwindowtest_SRCS localwindowtest.cpp)
add_executable(localwindowtestNAME localwindowtest ${localwindowtest_SRCS})
add_test(localwindowtest localwindowtest)
ecm_mark_as_test(localwindowtest)
target_link_libraries( localwindowtest Qt5::Test ktorrent)

set(remotewindowtest_SRCS remotewindowtest.cpp)
add_executable(remotewindowtestNAME remotewindowtest ${remotewindowtest_SRCS})
add_test(remotewindowtest remotewindowtest)
ecm_mark_as_test(remotewindowtest)
target_link_libraries( remotewindowtest Qt5::Test ktorrent)

set(connectiontest_SRCS connectiontest.cpp)
add_executable(connectiontestNAME connectiontest ${connectiontest_SRCS})
add_test(connectiontest connectiontest)
ecm_mark_as_test(connectiontest)
target_link_libraries( connectiontest Qt5::Test ktorrent)

set(sendtest_SRCS sendtest.cpp)
add_executable(sendtestNAME sendtest ${sendtest_SRCS})
add_test(sendtest sendtest)
ecm_mark_as_test(sendtest)
target_link_libraries( sendtest Qt5::Test ktorrent)

set(connecttest_SRCS connecttest.cpp)
add_executable(connecttestNAME connecttest ${connecttest_SRCS})
add_test(connecttest connecttest)
ecm_mark_as_test(connecttest)
target_link_libraries( connecttest Qt5::Test ktorrent)

set(transmittest_SRCS transmittest.cpp)
add_executable(transmittestNAME transmittest ${transmittest_SRCS})
add_test(transmittest transmittest)
ecm_mark_as_test(transmittest)
target_link_libraries( transmittest Qt5::Test ktorrent)

set(packetlosstest_SRCS packetlosstest.cpp)
add_executable(packetlosstestNAME packetlosstest ${packetlosstest_SRCS})
add_test(packetlosstest packetlosstest)
ecm_mark_as_test(packetlosstest)
target_link_libraries( packetlosstest Qt5::Test ktorrent)

set(fintest_SRCS fintest.cpp)
add_executable(fintestNAME fintest ${fintest_SRCS})
add_test(fintest fintest)
ecm_mark_as_test(fintest)
target_link_libraries( fintest Qt5::Test ktorrent)

set(sockettest_SRCS sockettest.cpp)
add_executable(sockettestNAME sockettest ${sockettest_SRCS})
add_test(sockettest sockettest)
ecm_mark_as_test(sockettest)
target_link_libraries( sockettest Qt5::Test ktorrent)

set(utppolltest_SRCS utppolltest.cpp)
add_executable(utppolltestNAME utppolltest ${utppolltest_SRCS})
add_test(utppolltest utppolltest)
ecm_mark_as_test(utppolltest)
target_link_libraries( utppolltest Qt5::Test ktorrent)

set(delaywindowtest_SRCS delaywindowtest.cpp)
add_executable(delaywindowtestNAME delaywindowtest ${delaywindowtest_SRCS})
add_test(delaywindowtest delaywindowtest)
ecm_mark_as_test(delaywindowtest)
target_link_libraries( delaywindowtest Qt5::Test ktorrent)

set(packetbuffertest_SRCS packetbuffertest.cpp)
add_executable(packetbuffertestNAME packetbuffertest ${packetbuffertest_SRCS})
add_test(packetbuffertest packetbuffertest)
ecm_mark_as_test(packetbuffertest)
target_link_libraries( packetbuffertest Qt5::Test ktorrent)